...
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ExtendWordsActivity">

    <TextView
        android:id="@+id/textv_title_hm_ew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_title_hm_ew"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
...
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/btn_back_hm_ew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="90dp"
            android:background="@color/colorAccent"
            android:text="@string/str_back"
...
